--- a/css/indexable.css
+++ b/css/indexable.css
@@ -12,8 +12,9 @@ header h1, h6{
 }
 
 .menu{
-    background: seashell ;
-    text-align: left;
+    background: #8ecae6 ;
+    text-align: center;
+
 }
 
 h1{
@@ -24,12 +25,66 @@ h1{
 
 body{
     text-align: center;
-    background: #7180B9;
+    background: #023047;
 }
 
 .agrupar{
     border: 1px solid black;
-    background-color: #DFF3E4;
+    background-color: #ffb703;
     width: 900px;
-    margin: 15px 10px;
+    margin: 20px auto;
+}
+
+.cabecera{
+    background: #219ebc;
+    border: 3px dashed ;
+    /* border-style: dotted; */
+    padding: 30px;
+}
+
+.section{
+    float: left;
+    width: 600px;
+    margin: 10px;
+}
+
+article{
+    background: #DFF3E4;
+    border: 1px solid #999;
+    margin: 15px;
+}
+
+time{
+    color: brown;
+}
+
+article footer{
+    text-align: right;
+}
+
+#idRef{
+    width: 200px;
+    float: right;
+    margin: 20px 0px;
+    border: 5px groove black;
+    margin-right: 40px;
+    margin-top: 30px;
+
+}
+
+#idRef blockquote{
+    border: 1px solid black;
+    padding: 10px;
+    background-color: #8ecae6;
+    margin-bottom: 10px;
+}
+
+.pieDePagina{
+    clear: both;
+}
+
+img{
+    width: 120px;
+    height: 100px;
+    margin: 20px auto;
 }
