--- a/css/calcFinal.css
+++ b/css/calcFinal.css
@@ -16,6 +16,7 @@
 }
 
 .screen{
+    /* para extender la columna con el span */
     grid-column: span 4;
     padding: 15px;
     margin: 10px 20px 20px 20px ;
@@ -34,3 +35,19 @@ button{
     box-shadow: 5px 5px 10px -3px #00000040;
 }
 
+button:active{
+    background-color: #fb8500;
+}
+
+.span2{
+    grid-column: span 2;
+}
+
+body{
+    background: #023047;
+}
+
+*{
+    color: white;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
